tests-integration/tests/roundtrip/invalid/semantic/typecheck/arith_expr_in_bool_list/input.essence
find x : bool
such that and([x, 2 < 3, 4 + 5])